Update 'net-nov14-test' component image to: artifactory-artifactory.apps.rosa.rhtap-services.xmdt.p3.openshiftapps.com/docker-local/immediate:98ffbcb26ec1fd5c76cb0478ee822552ef3140f4@sha256:fbfc48223219498a579879c6db01fd5012d36f80685e55be93ad7d162458bb4e

--- a/components/net-nov14-test/overlays/development/deployment-patch.yaml
+++ b/components/net-nov14-test/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: net-nov14-test
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: artifactory-artifactory.apps.rosa.rhtap-services.xmdt.p3.openshiftapps.com/docker-local/immediate:98ffbcb26ec1fd5c76cb0478ee822552ef3140f4@sha256:fbfc48223219498a579879c6db01fd5012d36f80685e55be93ad7d162458bb4e
+          name: container-image
